# bspwm

./: .gitignore  .gitmodules  AGENTS.md  README.md  autostart  bspwmrc  bspwmrc.backup
.codex/: audit.config.toml  config.toml
dunst/: dunstrc
lemonbar/: block_battery.sh  block_brightness.sh  block_clock.sh  block_cpu.sh  block_launcher.sh  block_network.sh  block_power.sh  block_screencast.sh  block_title_client.sh  block_trayer.sh  block_volume.sh  block_weather.sh  block_wsindicator.sh  config.sh  events.sh  network_worker.sh  panel_runtime.sh  power_rofi.sh  scheduler.sh  sighandler.sh  start.sh  title_server.sh  weather_worker.sh  xtmon.sh
lemonbar/lib/: click_action.sh  lemonbar_action.sh  logging_env.sh
lemonbar/modules/: block_battery.sh  block_brightness.sh  block_clock.sh  block_cpu.sh  block_launcher.sh  block_network.sh  block_power.sh  block_screencast.sh  block_title_client.sh  block_trayer.sh  block_volume.sh  block_weather.sh  block_wsindicator.sh
lemonbar_c/: .clang-format  .clang-tidy  .dockerignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
lemonbar_c/config/: panel.conf
lemonbar_c/include/: native_panel.h  native_tray.h  panel.h  version.h.in
lemonbar_c/scripts/: container-build.sh  container-check.sh
lemonbar_c/src/: config.c  main.c  modules.c  native_panel.c  native_tray.c  util.c
lemonbar_c/tests/: test_core.c
picom/: picom.conf  picom.conf.new
polybar/: colors.ini  config.ini  fonts.ini
polybar/modules/: battery.ini  bspwm.ini  cpu.ini  date.ini  launcher.ini  memory.ini  network.ini  power.ini  pulseaudio.ini  screenshot.ini  sep.ini  temperature.ini  title.ini
polybar/scripts/: check-all-updates.sh
rofi/: colors.rasi  config.rasi  launcher.rasi  powermenu.rasi
rofi/launcher/: launcher.sh
rofi/powermenu/: powermenu.sh
rofi/shared/: colors.rasi
rofi/themes/: launcher.rasi  powermenu.rasi  standard.rasi
sxhkd/: dwm_liste.txt  sxhkdrc  sxhkdrc.backup  sxhkdrc.example
trayer/: start_trayer.sh
